--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@material-ui/core": "^4.11.1",
+    "@types/js-cookie": "^2.2.6",
+    "cookies": "^0.8.0",
+    "framer-motion": "^2.9.5",
     "isomorphic-unfetch": "^3.1.0",
     "isomorphic-ws": "^4.0.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "memoize": "^0.1.1",
     "next": "10.0.2",
@@ -21,6 +28,7 @@
     "recoil": "^0.1.2",
     "socket.io-client": "^3.0.3",
     "use-socket.io-client": "^1.1.0",
+    "uuid": "^8.3.1",
     "ws": "^7.4.0"
   },
   "devDependencies": {
